@@ -15,6 +15,8 @@
       </entries>
 
       <properties>
+        <property name="audio-only" type="bool"
+                  _description="Only mux audio using the video stream for sync" />
       </properties>
 
       <wizard _description="MPEGTS" type="muxer"
